<resources>
    <string name="app_name">DietasApp</string>
    <string name="welcome_text">Seu App de Dietas</string>
    <string name="password_text">Senha</string>
    <string name="confirm_password_text">Confirmar senha</string>
    <string name="lost_password_question">Esqueceu a sua senha?</string>
    <string name="register_question">Não possui uma conta?</string>
    <string name="register_text">Cadastre-se</string>
    <string name="register_activity_title">Cadastro</string>
    <string name="register_welcome_text">Faça a sua conta e comece as suas dietas</string>
    <string name="user_name_text">Nome de Usuário</string>
    <string name="email_edit_text">Endereço de Email</string>
    <string name="phone_edit_text">Telefone</string>
    <string name="register_new_account_text">Crie sua Conta</string>
    <string name="my_diets">Minhas Dietas</string>
    <string name="search">Buscar</string>
    <string name="meal_title">Refeições para essa dieta</string>
    <string name="time_string">Horario Definido: 7 horas</string>
    <string name="foods_title">Alimentos para essa refeição</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancelar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Criar</string>
    <string name="toast_fill_action">Preencha todos os campos</string>
    <string name="toast_login_success">Login Realizado</string>
    <string name="toast_set_all_fields">É nescessario preencher todos os campos</string>
    <string name="toast_password_diff">As senhas estão diferentes</string>
    <string name="toast_weak_password">Sua senha deve ter no mínimo 6 caracteres</string>
    <string name="toast_invalid_email">Endereço de e-mail inválido</string>
    <string name="toast_used_email">Este e-mail já está registrado</string>
    <string name="toast_generic_singup_error">Falha ao cadastrar usuário.</string>
    <string name="toast_internet_error">Falha ao conectar com a internet</string>
    <string name="toast_wrong_user_password">Usuario ou senha estão errados</string>
    <string name="toast_insert_email">Insira o email</string>
    <string name="toast_insert_password">Insira a senha</string>
    <string name="toast_fill_time">Selecione um horário</string>
    <string name="in_loggin">Logando</string>
    <string name="user_data">Dados de Perfil</string>
    <string name="save_text">Salvar</string>
    <string name="delete_account">Excluir Conta</string>
    <string name="logout_text">Sair da Conta</string>
    <string name="new_password_text">Nova Senha (Opcional)</string>
    <string name="old_password_text">Senha Antiga (Obrigatória)</string>
    <string name="set_old_passowrd">Digite a sua senha antiga</string>
    <string name="update_success">Perfil Atualizado com Sucesso</string>
    <string name="update_problem">Não foi possível atualizar o perfil</string>
    <string name="insert_hours">Insira o horário</string>
    <string name="meal_name">Nome da Refeição</string>
    <string name="new_meal_title">Nova Refeição</string>
    <string name="new_diet_title">Nova Dieta</string>
    <string name="new_diet_name">Nome da Dieta</string>
    <string name="new_diet_description">Descrição para a Dieta</string>
    <string name="new_aliment_title">Novo Alimento</string>
    <string name="new_aliment_name">Nome do Alimento</string>
    <string name="new_aliment_weight">Peso do Alimento (gramas)</string>
    <string name="new_aliment_description">Descrição para o Alimento</string>
</resources>